Updated the CSS files to fix the responsiveness on mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -55,5 +55,6 @@ button[type=filled]:hover {
 @media screen and (max-width: 768px) {
   input[type=text] {
     font-size: 20px;
+    padding: 1% 1%;
   }
 }
