--- a/src/components/Doctors.css
+++ b/src/components/Doctors.css
@@ -15,3 +15,10 @@
 .doctors-container .subheading {
   color: gray;
 }
+
+@media screen and (max-width: 768px) {
+  .doctors-container {
+    padding: 2% 2%;
+    margin: 20px 4%;
+  }
+}
