--- a/src/components/HospitalCard.css
+++ b/src/components/HospitalCard.css
@@ -42,6 +42,11 @@
 
 
 @media screen and (max-width: 768px) {
+  .card-container {
+    padding: 4% 2%;
+    margin: 3% 1%;
+  }
+
   .card-container .timings {
     position: relative;
     text-align: left;
