--- a/src/routes/BookingPage.css
+++ b/src/routes/BookingPage.css
@@ -28,3 +28,10 @@
   text-align: center;
   padding: 20px;
 }
+
+@media screen and (max-width: 768px) {
+  .booking-form-container {
+    padding: 2% 2%;
+    margin: 20px 4%;
+  }
+}
